Домашнее задание по теме "Формы отправки данных. HTML и Django формы" Цель: понять на практике как работают POST запросы в Django. Использовать формы для обработки этих запросов.

--- a/UrbanDjango/templates/second_task/main_page.html
+++ b/UrbanDjango/templates/second_task/main_page.html
@@ -13,5 +13,12 @@
     <a href="http://127.0.0.1:8000/func">Функциональное представление</a>
 </h1>
 <br>
+<h1>
+    <a href="http://127.0.0.1:8000/reg_html">Регистрация по форме HTML</a>
+</h1>
+<br>
+<h1>
+    <a href="http://127.0.0.1:8000/reg_django">Регистрация по форме Django</a>
+</h1>
 </body>
 </html>
