--- a/UrbanDjango/templates/fourth_task/games.html
+++ b/UrbanDjango/templates/fourth_task/games.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <ul>
-        {% for gamee in games %}
+        {% for game in games %}
             <li><h3>{{ game }} <button>Купить</button></h3></li>
         {% endfor %}
     </ul>
